[package]
name = "konnektoren-web-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
konnektoren-tui = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
ratatui = { version = "0.26.2", default-features = false }
ratframe = { version = "1.0.13", default-features = false }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
log = "0.4"
