[package]
name = "konnektoren-web-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "A web-based TUI for Konnektoren."
license = "MIT"

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
konnektoren-tui = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
ratatui = { version = "0.26.2", default-features = false }
ratframe = { version = "1.1" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
log = "0.4"
